# WindLab

./: .gitignore  Cargo.toml  README.md  config.example.toml  guide.md
src/: config.rs  lib.rs  main.rs
src/boundary/: bounce_back.rs  mod.rs  periodic.rs  zou_he.rs
src/collision/: bgk.rs  mod.rs
src/core/: mod.rs  solver.rs
src/geometry/: coords.rs  mod.rs  stl.rs  voxelizer.rs
src/grid/: block.rs  cell.rs  mod.rs  soa_domain.rs
src/io/: checkpoint.rs  mod.rs  vtk.rs  vtp.rs
src/lattice/: equilibrium.rs  mod.rs
src/physics/: forcing.rs  macroscopic.rs  mod.rs
src/streaming/: mod.rs
src/visualization/: mod.rs  rerun_viz.rs
